# Tools4Sys

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: base_pocket_prefix.yaml  base_pocket_prefix_8gpu.yaml  base_pocket_prefix_8gpu_smoke.yaml  base_pocket_prefix_smoke.yaml  base_pocket_prefix_tune_1gpu.yaml  cpgrpo_denovo.yaml  cpgrpo_denovo_1gpu_ng64_bs1536.yaml  cpgrpo_denovo_2gpu_ng16_bs1024_lr5e-5_beta5e-3.yaml  cpgrpo_denovo_2gpu_ng16_bs1024_lr5e-5_beta5e-3_ni1.yaml  cpgrpo_denovo_2gpu_ng64_bs1280.yaml  cpgrpo_denovo_2gpu_ng64_bs1280_bench10.yaml  cpgrpo_denovo_2gpu_ng64_bs1280_lr5e-5_beta5e-3.yaml  cpgrpo_denovo_2gpu_ng64_bs1280_rnd1.yaml  cpgrpo_denovo_2gpu_sgrpo_ng16_sg8_bs1024_lr5e-5_beta5e-3_smoke50.yaml  cpgrpo_denovo_2gpu_sgrpo_ng64_sg8_bs1024_lr5e-5_beta5e-3.yaml  cpgrpo_denovo_2gpu_sgrpo_ng64_sg8_bs1024_lr5e-5_beta5e-3_gw09.yaml  cpgrpo_denovo_2gpu_sgrpo_ng64_sg8_bs1024_lr5e-5_beta5e-3_rnd08.yaml  cpgrpo_denovo_2gpu_sgrpo_ng64_sg8_bs1024_lr5e-5_beta5e-3_rnd08_gw09.yaml  cpgrpo_denovo_memprobe_128.yaml  cpgrpo_denovo_memprobe_256.yaml  cpgrpo_denovo_memprobe_32.yaml  cpgrpo_denovo_memprobe_64.yaml  cpgrpo_denovo_ng512_bs1024_lr5e-5_beta5e-3_ni1.yaml  cpgrpo_denovo_ng512_bs1024_lr5e-5_beta5e-3_ni1_ms2000.yaml  cpgrpo_denovo_ng512_bs1024_lr5e-5_beta5e-3_ni1_ms2000_divreg005.yaml  cpgrpo_denovo_ng512_bs1024_lr5e-5_beta5e-3_ni1_ms2000_hbd.yaml  cpgrpo_denovo_ng512_bs1024_lr5e-5_beta5e-3_ni1_ms2000_hbd_smoke10.yaml  cpgrpo_denovo_ng512_bs1024_lr5e-5_beta5e-3_ni1_ms2000_hbd_st09_sc04.yaml  cpgrpo_denovo_ng512_bs1024_lr5e-5_beta5e-3_ni1_ms2000_stl0.yaml  (+155 more)
(+252 files in other folders)
